java 21 and spring-boot 3.1.4

--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,6 @@
-image:https://maven-badges.herokuapp.com/maven-central/net.rgielen/javafx-weaver/badge.svg[Maven Central,link=http://search.maven.org/#search%7Cga%7C1%7Cnet.rgielen.javafx-weaver]
-image:https://api.travis-ci.org/rgielen/javafx-weaver.svg[Build Status,link=http://travis-ci.org/rgielen/javafx-weaver]
-
 == JavaFX-Weaver
+
+Original from https://github.com/rgielen/javafx-weaver[rgielen/javafx-weaver]
 
 *An opinionated view on how to do dependency injection and FXML view handling in JavaFX.*
 
@@ -13,20 +12,20 @@ Complementary Blog Posts:
 Features:
 
 * Supportive tooling for using JavaFX together with dependency injection frameworks such as Spring or CDI
-* https://github.com/rgielen/javafx-weaver/tree/master/samples/springboot-sample#maincontroller-fxmlview-example[Declarative FXML view binding] - Create a controller class and annotate it with ```@FxmlView``` and let ```FxWeaver``` handle view loading and instantiating
-* https://github.com/rgielen/javafx-weaver/tree/master/samples/springboot-sample#main-controller-fxml[Support for ```fx:controller``` attribute in FXML], with controller classes being instantiated, autowired and fully managed by your DI framework of choice
-* https://github.com/rgielen/javafx-weaver/tree/master/samples/springboot-sample#main-controller-loading-example[Acquire managed controller instances] with automatically weaved FXML views
-* https://github.com/rgielen/javafx-weaver/tree/master/samples/springboot-sample#tiled-views-re-using-independent-components[Support for tiling / componentisation]: Create view components with independent controllers and aggregate them in other views using ```fx:include```, again with full DI support
+* https://github.com/aroonj/javafx-weaver/tree/master/samples/springboot-sample#maincontroller-fxmlview-example[Declarative FXML view binding] - Create a controller class and annotate it with ```@FxmlView``` and let ```FxWeaver``` handle view loading and instantiating
+* https://github.com/aroonj/javafx-weaver/tree/master/samples/springboot-sample#main-controller-fxml[Support for ```fx:controller``` attribute in FXML], with controller classes being instantiated, autowired and fully managed by your DI framework of choice
+* https://github.com/aroonj/javafx-weaver/tree/master/samples/springboot-sample#main-controller-loading-example[Acquire managed controller instances] with automatically weaved FXML views
+* https://github.com/aroonj/javafx-weaver/tree/master/samples/springboot-sample#tiled-views-re-using-independent-components[Support for tiling / componentisation]: Create view components with independent controllers and aggregate them in other views using ```fx:include```, again with full DI support
 * https://gluonhq.com/products/scene-builder/[SceneBuilder] fully supported, even when creating and using view tiles
 * Spring  and Spring Boot specific:
-** https://github.com/rgielen/javafx-weaver/tree/master/samples/springboot-sample#springfxweaver-directly-inject-a-fxcontrollerandview-reference[Support for direct injection] of ```FxControllerAndView``` instances based on generic types
-** https://github.com/rgielen/javafx-weaver/tree/master/samples/springboot-sample#spring-boot-starter[Spring Boot Starter] including auto-configuration
+** https://github.com/aroonj/javafx-weaver/tree/master/samples/springboot-sample#springfxweaver-directly-inject-a-fxcontrollerandview-reference[Support for direct injection] of ```FxControllerAndView``` instances based on generic types
+** https://github.com/aroonj/javafx-weaver/tree/master/samples/springboot-sample#spring-boot-starter[Spring Boot Starter] including auto-configuration
 
 === Getting Started
 
 ==== Spring Boot
 
-Add the https://github.com/rgielen/javafx-weaver/tree/master/samples/springboot-sample#spring-boot-starter[Spring Boot Starter] dependency to your project and you are all set:
+Add the https://github.com/aroonj/javafx-weaver/tree/master/samples/springboot-sample#spring-boot-starter[Spring Boot Starter] dependency to your project and you are all set:
 
 with Maven:
 [source,xml]
@@ -34,14 +33,14 @@ with Maven:
 <dependency>
     <groupId>net.rgielen</groupId>
     <artifactId>javafx-weaver-spring-boot-starter</artifactId>
-    <version>1.3.0</version>
+    <version>2.0.0</version>
 </dependency>
 ----
 
 with Gradle:
 [source,groovy]
 ----
-implementation 'net.rgielen:javafx-weaver-spring-boot-starter:1.3.0'
+implementation 'net.rgielen:javafx-weaver-spring-boot-starter:2.0.0'
 ----
 
 ==== Manual Setup
@@ -54,19 +53,19 @@ with Maven:
 <dependency>
     <groupId>net.rgielen</groupId>
     <artifactId>javafx-weaver-core</artifactId>
-    <version>1.3.0</version>
+    <version>2.0.0</version>
 </dependency>
 ----
 
 with Gradle:
 [source,groovy]
 ----
-implementation 'javafx-weaver-spring-boot-starter:1.3.0'
+implementation 'javafx-weaver-spring-boot-starter:2.0.0'
 ----
 
 === Using FxWeaver
 
-For now, refer to the JavaDocs and the https://github.com/rgielen/javafx-weaver/tree/master/samples/springboot-sample[Spring Boot based FxWeaver Sample and Feature Demo Project].
+For now, refer to the JavaDocs and the https://github.com/aroonj/javafx-weaver/tree/master/samples/springboot-sample[Spring Boot based FxWeaver Sample and Feature Demo Project].
 
 More documentation to come.
 
@@ -74,9 +73,3 @@ More documentation to come.
 
 The project is licensed under https://www.apache.org/licenses/LICENSE-2.0[Apache License V2.0].
 
-=== Contributing
-
-Feel free to open issues and pull requests on GitHub.
-This is a side project of mine, so please don't expect enterprise grade support.
-
-You can find me on Twitter as well: https://twitter.com/rgielen[@rgielen]
